--- a/src/components/todo-list/todo-list.scss
+++ b/src/components/todo-list/todo-list.scss
@@ -2,6 +2,7 @@
   padding: 10px 0;
   padding-top: 0;
   border-bottom: 1px solid rgba(1,1,1,0.1);
+  color:black;
 
   &-title {
     font-weight: 500;
@@ -14,6 +15,7 @@
     padding-top: 0;
     margin-bottom: 10px;
     font-weight: bold;
+    color: black;
   }
 
   &-content {
